apps/panopticode/lights/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lights-be
  namespace: panopticode
  labels:
    app: lights-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lights-be
  template:
    metadata:
      labels:
        app: lights-be
    spec:
      containers:
      - name: lights-be
        image: jerome3o/lights-server
        ports:
        - containerPort: 8000
