apps/panopticode/lights/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lights-be-service
  namespace: panopticode
spec:
  selector:
    app: lights-be
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
