apps/panopticode/lights/manifests/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lights-be
  namespace: panopticode
spec:
  routes:
  - kind: Rule
    match: Host(`lights.k8s.jeromeswannack.com`)
    middlewares:
    - name: api-key-auth
      namespace: panopticode
    services:
    - kind: Service
      name: lights-be-service
      namespace: panopticode
      port: 8000
      scheme: http
